# ISO_Fortran_binding

./: CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
include/: ISO_Fortran_binding.h
src/: CFI_address.c  CFI_allocate.c  CFI_deallocate.c  CFI_establish.c  CFI_is_contiguous.c  CFI_section.c  CFI_select_part.c  CFI_setpointer.c  CMakeLists.txt  ISO_Fortran_binding.c
tests/: CMakeLists.txt  ISO_Fortran_binding_tests.c  test-CFI_address.c  test-CFI_deallocate.c  test-CFI_establish.c  test-CFI_is_contiguous.c  test-CFI_section.c  test-CFI_select_part.c  test-CFI_setpointer.c
